/*
 *
 *  *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  *  Copyright 2021 Chad Higgins
 *
 */

package ucf.assignments;

import java.util.List;

public class MasterSave {

    //this will keep a list of titles of ToDoList, so the system
    // can load the master save and find the other saved files
    // even after closing the program.

    //List<String> masterSave = new List;


    /*
    public Boolean getToDoList(String key)
    {
        //check if you have any saved if not redirect to new toDoList
        //loop thur list comparing strings until one matches
        //if they don't, prompt for another file title

        //return true
    }

    public List<String> getAllToDoList()
    {

        //return the master save list

    }


    public void addToDoList(String title)
    {
        //add name of saved ToDoList to master save
    }
     */

}
